--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "^2.0.3",
     "autoprefixer": "^9.8.6",
+    "eslint": "^7.20.0",
+    "eslint-plugin-react": "^7.22.0",
     "postcss": "^7.0.35",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.3"
   },
