--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint": "^7.20.0",
     "eslint-plugin-react": "^7.22.0",
     "postcss": "^7.0.35",
+    "prettier": "2.2.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.3"
   },
   "author": "",
